[gd_scene load_steps=7 format=3 uid="uid://cl74tv15qcmbm"]

[ext_resource type="Script" path="res://NPC car_testbed2.gd" id="1_oqabo"]
[ext_resource type="Texture2D" uid="uid://pa2d0w1wc8l1" path="res://Police (16 x 16).png" id="2_jew65"]
[ext_resource type="Script" path="res://RayGeneral.gd" id="3_7ya2w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifiu7"]
size = Vector2(24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_68aes"]
atlas = ExtResource("2_jew65")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pbpgm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68aes")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="NPC_Car_2" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_oqabo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource("RectangleShape2D_ifiu7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D"]
texture_filter = 1
rotation = 3.14334
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_pbpgm")

[node name="RayCastFore" type="RayCast2D" parent="."]
rotation = 1.57079
target_position = Vector2(-60, 0)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastRight" type="RayCast2D" parent="."]
rotation = 0.3735
target_position = Vector2(0, -45)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastLeft" type="RayCast2D" parent="."]
rotation = 2.76809
target_position = Vector2(0, 45)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastRearLeft" type="RayCast2D" parent="."]
rotation = 3.36674
target_position = Vector2(30, 30)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastRearRight" type="RayCast2D" parent="."]
rotation = -0.225147
target_position = Vector2(30, -30)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastForeLeft" type="RayCast2D" parent="."]
rotation = 2.16944
target_position = Vector2(-35, 35)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastForeRight" type="RayCast2D" parent="."]
rotation = 0.972148
target_position = Vector2(-35, -35)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastFore2" type="RayCast2D" parent="."]
rotation = 1.57079
scale = Vector2(2, 2)
target_position = Vector2(-60, 0)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastRight2" type="RayCast2D" parent="."]
rotation = 0.3735
target_position = Vector2(0, -45)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastLeft2" type="RayCast2D" parent="."]
rotation = 2.76809
target_position = Vector2(0, 45)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastRearLeft2" type="RayCast2D" parent="."]
rotation = 3.36674
target_position = Vector2(30, 30)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastRearRight2" type="RayCast2D" parent="."]
rotation = -0.225147
target_position = Vector2(30, -30)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastForeLeft2" type="RayCast2D" parent="."]
rotation = 2.16944
target_position = Vector2(-35, 35)
collision_mask = 2
script = ExtResource("3_7ya2w")

[node name="RayCastForeRight2" type="RayCast2D" parent="."]
rotation = 0.972148
target_position = Vector2(-35, -35)
collision_mask = 2
script = ExtResource("3_7ya2w")
